# A-core

./: .gitignore  .pre-commit-hooks.yaml  .readthedocs.yaml  0-WHY-AUTISH.md  AGENTS.md  CONTRIBUTING.md  README.md  mkdocs.yml  modules.json  pyproject.toml
.serena/memories/architecture/: wikidata-per-language-labels.md
docs/en/: index.md
docs/eo/: index.md
docs/fr/: index.md
src/A/: __init__.py  cli.py  console.py
src/A/core/: __init__.py  ai.py  ai_config.py  backup.py  backup_targets.py  config.py  crypto.py  exceptions.py  export.py  file_security.py  http.py  i18n.py  import_.py  keyring.py  linking.py  links.py  markdown_html_view.py  markdown_parser.py  migrate_uzanto.py  migration.py  network.py  paths.py  plugin_loader.py  providers.py  references.py  registry.py  service.py  testing.py  trash.py  types.py  undo.py  uzanto_cli.py  uzanto_service.py  web.py
src/A/core/wikidata/: __init__.py  _client.py  _common.py
src/A/data/: __init__.py  base.py  harden.py  search.py
src/A/utils/: __init__.py  clipboard.py  date.py  deps.py  editor.py  expr.py  interactive.py  normalize.py  output.py  repl.py  subprocess.py
tests/: conftest.py  test_backup.py  test_backup_targets.py  test_base.py  test_cli.py  test_clipboard.py  test_core.py  test_crypto.py  test_date.py  test_deps.py  test_export.py  test_expr.py  test_file_security.py  test_http.py  test_import.py  test_interactive.py  test_markdown.py  test_paths.py  test_plugin_loader.py  test_registry.py  test_repl.py  test_search.py  test_trash.py  test_uzanto.py  test_web.py  test_wikidata.py
