[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "A-core"
version = "0.1.0"
description = "A CLI framework core - minimal, modular, accessible"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{name = "Ron", email = "ron@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "cryptography>=42.0.0",
    "tomlkit>=0.12.0",
    "mistune>=3.0.0",
    "pygments>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
search = ["rapidfuzz>=3.0"]
keyring = ["keyring>=24.0.0"]
clipboard = ["pyperclip>=1.8"]

[project.scripts]
A = "A.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/A"]

[tool.poetry]
name = "A-core"
version = "0.1.0"
description = "A CLI framework core - minimal, modular, accessible"
readme = "README.md"
license = "GPL-3.0-only"
authors = ["Ron <ron@example>"]
packages = [{include = "A", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
ruff = ">=0.4"

[tool.poetry.scripts]
A = "A.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]